create database code

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+
+# MS SQL Server Configuration
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=crypto_trading
+spring.datasource.username=sa
+spring.datasource.password=ceco04
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
