inserted initialBalance and created AccountRepository

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.application.name=backend
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=crypto_trading
 spring.datasource.username=sa
 spring.datasource.password=ceco04
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
