--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
 # MS SQL Server Configuration
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=crypto_tradingencrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=ceco04
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=crypto_trading;encrypt=true;trustServerCertificate=true
+spring.datasource.username=<username>
+spring.datasource.password=<password>
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8081
